# mosys

./: .gitignore  Cargo.toml  Kconfig  Makefile  OWNERS  PRESUBMIT.cfg  README  TODO  build.rs  meson.build  meson_options.txt  mosys.c  seccomp_debug.sh
core/: cli.c  file_lock.c  globals.c  intf_list.c  meson.build  platform.c  platform_unittest.c
core/command/: Makefile  battery.c  ec.c  ec_common.c  eeprom.c  eventlog.c  ish.c  memory.c  memory_spd.c  meson.build  nvram.c  platform.c  psu.c  sensor.c
drivers/: Kconfig  Makefile  meson.build
drivers/ene/: meson.build
drivers/google/: cros_ec.c  cros_ec_cb.c  cros_ec_dev.c  cros_ec_i2c.c  cros_ec_lpc.c  gec.c  meson.build  wilco_ec.c
drivers/intel/: lpss_gpio.c  meson.build
drivers/intel/baytrail/: gpio_mmio.c  meson.build
drivers/intel/braswell/: meson.build
drivers/intel/lynxpoint_lp/: gpio.c  meson.build
drivers/intel/nm10/: meson.build
drivers/intel/series6/: meson.build
drivers/ite/: meson.build
drivers/nuvoton/: meson.build
drivers/nvidia/: meson.build
drivers/nvidia/tegra124/: meson.build
drivers/samsung/: gpio.c  meson.build
drivers/samsung/exynos5250/: meson.build
drivers/samsung/exynos5420/: meson.build
drivers/sandisk/: meson.build
drivers/smsc/: mec1308_mbx.c  meson.build
lib/: Kconfig  Makefile  meson.build
lib/acpi/: chromeos_acpi.c  meson.build
lib/cbfs/: cbfs_core.c  meson.build
lib/cros_config/: Kconfig  Makefile  config.dtb.S  cros_config.c  cros_config_data.c  cros_config_struct.c  dummy_cros_config_data.c  meson.build
lib/crypto/: meson.build
lib/crypto/mincrypt/: meson.build
lib/dynamic_array/: meson.build
lib/eeprom/: eeprom.c  meson.build
lib/eventlog/: elog.c  elog_smbios.c  meson.build
lib/file/: fdt.c  file.c  file_unittest.c  meson.build
lib/flashrom/: flashrom.c  meson.build
lib/math/: math.c  math_unittest.c  meson.build
lib/memory/: memory.c  meson.build
lib/misc/: generic_callbacks.c  meson.build  probe.c  sku.c
lib/sensors/: dts.c  meson.build  sensors.c
lib/smbios/: meson.build  mosys_callbacks.c  smbios.c
lib/spd/: ddr2.c  ddr3.c  ddr4.c  jedec_id.c  meson.build  nonspd.c  nonspd_modules.c  spd.c  spd_fields.c
lib/string/: meson.build  string.c
lib/val2str/: meson.build  val2str.c
lib/vbnv/: meson.build  vbnv_flash.c
lib/vpd/: binary_blob.c  meson.build  vpd.c  vpd_file_cache.c  vpd_sysfs.c  vpd_unittest.c
platform/: Kconfig  Makefile  meson.build  platform_list.c
platform/aarch64/: cheza  gru  kukui  meson.build  platform_list.c  trogdor
platform/alex/: ec.c  eeprom.c  memory.c  meson.build
platform/arm/: meson.build  platform_list.c
platform/arm/asurada/: asurada.c  asurada.h  eeprom.c  memory.c  meson.build  sys.c
platform/arm/cheza/: cheza.c  cheza.h  eeprom.c  memory.c  meson.build  sys.c
platform/arm/cyclone/: cyclone.c  cyclone.h  eeprom.c  memory.c  meson.build
platform/arm/gru/: eeprom.c  gru.c  gru.h  memory.c  meson.build  (+1 more)
platform/auron/: auron.c  auron.h  eeprom.c  gpio.c  memory.c  meson.build  sys.c
platform/beltino/: beltino.c  beltino.h  eeprom.c  meson.build  sensors.c  sys.c
platform/butterfly/: ec.c  eeprom.c  meson.build
platform/cheza/: cheza.c  cheza.h  memory.c  meson.build  sys.c
platform/cyan/: cyan.c  cyan.h  meson.build  sys.c
platform/cyclone/: cyclone.c  cyclone.h  memory.c  meson.build  sys.c
platform/daisy/: daisy.c  meson.build  sys.c
platform/dedede/: dedede.c  dedede.h  memory.c  meson.build  sys.c
platform/dragonegg/: dragonegg.c  eeprom.c  memory.c  meson.build  nvram.c  sys.c
platform/dummy/: dummy.c  dummy.h  ec.c  eeprom.c  meson.build  sys.c
platform/experimental/: Kconfig  Makefile
platform/fizz/: fizz.c  fizz.h  memory.c  meson.build  sys.c
platform/glados/: glados.c  glados.h  meson.build  sys.c
platform/google/: Kconfig  Makefile
platform/gru/: eeprom.c  gru.c  gru.h  memory.c  meson.build  sys.c
platform/hatch/: eeprom.c  hatch.c  hatch.h  memory.c  meson.build  nvram.c  sys.c
platform/kahlee/: Makefile  eeprom.c  kahlee.c  kahlee.h  memory.c  meson.build  nvram.c  sys.c
platform/kiev/: eeprom.c  meson.build
platform/kukui/: kukui.c  kukui.h  memory.c  meson.build  sys.c
platform/link/: meson.build
platform/lumpy/: ec.c  eeprom.c  meson.build
platform/mario/: ec.c  eeprom.c  meson.build
platform/mistral/: eeprom.c  memory.c  mistral.c  mistral.h  sys.c
platform/nami/: Makefile  eeprom.c  memory.c  meson.build  nami.c  nami.h  nvram.c  sys.c
platform/nyan/: memory.c  meson.build  nyan.c  nyan.h  sys.c
platform/oak/: eeprom.c  memory.c  meson.build  oak.c  oak.h  sys.c
platform/octopus/: Makefile  eeprom.c  memory.c  meson.build  nvram.c  octopus.c  octopus.h  sys.c
platform/parrot/: eeprom.c  meson.build
platform/peach/: meson.build  peach.c  sys.c
platform/pinky/: memory.c  meson.build  pinky.c  pinky.h  psu.c  sys.c
platform/poppy/: eeprom.c  memory.c  meson.build  nvram.c  poppy.c  poppy.h  sys.c
platform/puff/: memory.c  meson.build  nvram.c  puff.c  puff.h  sys.c
platform/rambi/: memory.c  meson.build  psu.c  rambi.c  rambi.h  sys.c
platform/reef/: meson.build  reef.c  reef.h  sys.c
platform/samus/: eeprom.c  gpio.c  meson.build  samus.c  samus.h  sys.c
platform/sarien/: eeprom.c  memory.c  meson.build  nvram.c  sarien.c  sarien.h  sys.c
platform/skate/: memory.c  meson.build  skate.c  sys.c
platform/slippy/: memory.c  meson.build  slippy.c  slippy.h  sys.c
platform/smaug/: meson.build  smaug.c
platform/spring/: meson.build  sys.c
platform/storm/: meson.build  storm.c  storm.h  sys.c
platform/stout/: ec.c  eeprom.c  meson.build
platform/strago/: meson.build  strago.c  strago.h  sys.c
platform/stumpy/: eeprom.c  meson.build
platform/trogdor/: memory.c  sys.c  trogdor.c
platform/volteer/: memory.c  meson.build  nvram.c  sys.c  volteer.c  volteer.h
platform/x86_64/: meson.build  platform_list.c
platform/z600/: meson.build
platform/zgb/: ec.c  eeprom.c  meson.build
platform/zork/: eeprom.c  meson.build  nvram.c  sys.c  zork.c  zork.h
unittests/: meson.build
(+238 files in other folders)
