option(
  'arch',
  type : 'combo',
  value: 'x86',
  choices: ['x86', 'x86_64', 'amd64', 'mips', 'arm', 'arm64'],
  description: 'The target architecture.',
)
option(
  'use_cros_config',
  type: 'boolean',
  value: 'false',
  description: 'If set to true, cros_config will be used',
)

option(
  'test_cros_config',
  type: 'boolean',
  value: 'false',
  description: 'If set to true, use fake configuration for testing cros_config',
)
