libmosys_src += files(
  'platform_list.c',
)

subdir('auron')
subdir('beltino')
subdir('cyan')
subdir('cyclone')
subdir('daisy')
subdir('dummy')
subdir('fizz')
subdir('glados')
subdir('gru')
subdir('kahlee')
subdir('kiev')
subdir('link')
subdir('nami')
subdir('nyan')
subdir('oak')
subdir('octopus')
subdir('parrot')
subdir('peach')
subdir('pinky')
subdir('rambi')
subdir('reef')
subdir('samus')
subdir('skate')
subdir('slippy')
subdir('smaug')
subdir('spring')
subdir('storm')
subdir('stout')
subdir('strago')
