libmosys_src += files(
  'platform_list.c',
)

subdir('auron')
subdir('beltino')
subdir('cheza')
subdir('cyan')
subdir('cyclone')
subdir('daisy')
subdir('dragonegg')
subdir('dummy')
subdir('fizz')
subdir('glados')
subdir('gru')
subdir('hatch')
subdir('kahlee')
if use_cros_config
  subdir('kukui')
endif
subdir('mistral')
subdir('nami')
subdir('nyan')
subdir('oak')
if use_cros_config
  subdir('octopus')
endif
subdir('peach')
subdir('pinky')
subdir('poppy')
subdir('rambi')
subdir('reef')
subdir('samus')
subdir('sarien')
subdir('skate')
subdir('slippy')
subdir('storm')
subdir('strago')
