libmosys_src += files(
  'platform_list.c',
)

subdir('auron')
subdir('beltino')
subdir('cheza')
subdir('cyan')
subdir('cyclone')
subdir('dedede')
subdir('fizz')
subdir('glados')
subdir('gru')
subdir('hatch')
subdir('kahlee')
if use_cros_config
  subdir('kukui')
endif
subdir('mistral')
subdir('nami')
subdir('nyan')
subdir('oak')
if use_cros_config
  subdir('octopus')
endif
subdir('pinky')
subdir('poppy')
subdir('puff')
subdir('rambi')
subdir('reef')
subdir('sarien')
subdir('storm')
subdir('strago')
subdir('trogdor')
subdir('volteer')
subdir('zork')
