if use_cros_config
  subdir('asurada')
  subdir('cheza')
  subdir('kukui')
  subdir('trogdor')
else
  subdir('cyclone')
  subdir('mistral')
  subdir('pinky')
  subdir('storm')
endif

# These platforms are currently undergoing unibuild migrations and
# have support for pre-unibuild and unibuild using some ugly ifdefs.
subdir('oak')
subdir('gru')
