mosys_platform_butterfly_src = [
  'eeprom.c',
  'nvram.c',
  'memory.c',
  'sys.c',
  'storage.c',
  'butterfly.c',
  'ec.c',
]

libmosys_platform_butterfly = static_library(
  'mosys_platform_butterfly',
  [mosys_platform_butterfly_src],
  include_directories : include_common,
  link_with: [],
  pic: true,
)
