libmosys_src += files(
  'platform_list.c',
)

if use_cros_config
  subdir('dedede')
  subdir('fizz')
  subdir('kahlee')
  subdir('hatch')
  subdir('nami')
  subdir('poppy')
  subdir('puff')
  subdir('octopus')
  subdir('sarien')
  subdir('volteer')
  subdir('zork')
else
  subdir('auron')
  subdir('beltino')
  subdir('cyan')
  subdir('glados')
  subdir('rambi')
  subdir('strago')
endif

subdir('reef')
