if use_cros_config
  subdir('dedede')
  subdir('fizz')
  subdir('kahlee')
  subdir('hatch')
  subdir('poppy')
  subdir('puff')
  subdir('octopus')
  subdir('reef')
  subdir('sarien')
  subdir('volteer')
  subdir('zork')
else
  subdir('auron')
  subdir('glados')
  subdir('jecht')
  subdir('rambi')
  subdir('strago')
endif
